More stylish formula for Integer Register-Register Instructions

--- a/spec.tex
+++ b/spec.tex
@@ -18,6 +18,7 @@
 \usepackage{enumitem}
 \usepackage{verbatimbox}
 \usepackage{amsmath}
+\usepackage{amssymb}
 
 \usepackage[olditem,oldenum]{paralist}
 
@@ -228,22 +229,22 @@
 \begin{center}
     \begin{tabular}{|c|c|c|l|} \hline
       Instruction & Opcode & Formula & \multicolumn{1}{c|}{Description} \\ \hline \hline
-      ADD rd, rs1, rs2 & 00000001 & rd \textless- rs1 + rs2 & 
-      \begin{tabular}{l} add rs1 value to rs2 value,  \\ and store to rd \end{tabular} \\ \hline
-      SUB rd, rs1, rs2 & 00001001 & rd \textless- rs1 - rs2 & 
-      \begin{tabular}{l} subtract rs2 value from rs1 value, \\ and store to rd \end{tabular} \\ \hline
-      AND rd, rs1, rs2 & 00010001 & rd \textless- rs1 \& rs2 & 
-      \begin{tabular}{l} do bit between rs1 value and rs2 value, \\ and store to rd \end{tabular} \\ \hline
-      XOR rd, rs1, rs2 & 00011001 & rd \textless- rs1 \textasciicircum \ rs2 & 
-      \begin{tabular}{l} do bit xor between rs1 value and rs2 value, \\ and store to rd \end{tabular} \\ \hline
-      OR  rd, rs1, rs2 & 00100001 & rd \textless- rs1 \textbar \ rs2 & 
-      \begin{tabular}{l} do bit or between rs1 value and rs2 value, \\ and store to rd \end{tabular} \\ \hline
-      LSL rd, rs1, rs2 & 00101001 & rd \textless- rs1 \textless \textless \ rs2 & 
-      \begin{tabular}{l} do left logical shift rs1 value with width rs2 value, \\ and store to rd \end{tabular} \\ \hline
-      LSR rd, rs1, rs2 & 00110001 & rd \textless- rs1 \textgreater \textgreater \ rs2 & 
-      \begin{tabular}{l} do right logical shift rs1 value with width rs2 value, \\ and store to rd \end{tabular} \\ \hline
-      ASR rd, rs1, rs2 & 00111001 & rd \textless- rs1 \textgreater \textgreater \textgreater \ rs2 & 
-      \begin{tabular}{l} do rigth arithmetic shift rs1 value with width rs2 value, \\ and store to rd \end{tabular} \\ \hline
+      ADD rd, rs1, rs2 & 00000001 & $\mathrm{rd} \leftarrow \mathrm{rs1} + \mathrm{rs2}$ &
+      \begin{tabular}{l} Add rs1 value to rs2 value,\\ and store to rd. \end{tabular} \\ \hline
+          SUB rd, rs1, rs2 & 00001001 & $\mathrm{rd} \leftarrow \mathrm{rs1} - \mathrm{rs2}$ &
+      \begin{tabular}{l} Subtract rs2 value from rs1 value,\\ and store to rd. \end{tabular} \\ \hline
+          AND rd, rs1, rs2 & 00010001 & $\mathrm{rd} \leftarrow \mathrm{rs1} \land \mathrm{rs2}$ &
+      \begin{tabular}{l} Do bit and between rs1 value and rs2 value,\\ and store to rd. \end{tabular} \\ \hline
+          XOR rd, rs1, rs2 & 00011001 & $\mathrm{rd} \leftarrow \mathrm{rs1} \oplus \mathrm{rs2}$ &
+      \begin{tabular}{l} Do bit xor between rs1 value and rs2 value, \\ and store to rd. \end{tabular} \\ \hline
+          OR  rd, rs1, rs2 & 00100001 & $\mathrm{rd} \leftarrow \mathrm{rs1} \lor \mathrm{rs2}$ &
+      \begin{tabular}{l} Do bit or between rs1 value and rs2 value, \\ and store to rd. \end{tabular} \\ \hline
+          LSL rd, rs1, rs2 & 00101001 & $\mathrm{rd} \leftarrow \mathrm{rs1} \ll \mathrm{rs2}$ &
+      \begin{tabular}{l} Do left logical shift rs1 value with width rs2 value, \\ and store to rd. \end{tabular} \\ \hline
+          LSR rd, rs1, rs2 & 00110001 & $\mathrm{rd} \leftarrow \mathrm{rs1} \gg \mathrm{rs2}$ &
+      \begin{tabular}{l} Do right logical shift rs1 value with width rs2 value, \\ and store to rd. \end{tabular} \\ \hline
+          ASR rd, rs1, rs2 & 00111001 & $\mathrm{rd} \leftarrow \mathrm{rs1} \ggg \mathrm{rs2}$ &
+      \begin{tabular}{l} Do right arithmetic shift rs1 value with width rs2 value, \\ and store to rd. \end{tabular} \\ \hline
     \end{tabular}
 \end{center}
 
