Update conditional branches: fix typo

--- a/spec.tex
+++ b/spec.tex
@@ -355,18 +355,18 @@ simm10[7:0]  & src1 & src2 & simm10[9:8] & BLEU \\
 \begin{center}
     \begin{tabular}{|c|c|l|} \hline
       Instruction & Opcode & \multicolumn{1}{c|}{Description} \\ \hline \hline
-      BEQ rs1, rs2, simm10 & 001111 & 
-      \begin{tabular}{l} if rs1 value is equal to rs2 value, \\ jump to PC + simm10 \end{tabular} \\ \hline
-      BNE rs1, rs2, simm10 & 101111 & 
-      \begin{tabular}{l} if rs1 value is not equal to rs2 value, \\ jump to PC + simm10 \end{tabular} \\ \hline
-      BLT rs1, rs2, simm10 & 110111 & 
-      \begin{tabular}{l} if rs1 signed value is less than rs2 one, \\ jump to PC + simm10 \end{tabular} \\ \hline
-      BLTU rs1, rs2, simm10 & 010111 & 
-      \begin{tabular}{l} if rs1 unsigned value is less than rs2 one, \\ jump to PC + simm10 \end{tabular} \\ \hline
-      BLE rs1, rs2, simm10 & 111111 & 
-      \begin{tabular}{l} if rs1 signed value is equal or less than rs2 one, \\ jump to PC + simm10 \end{tabular} \\ \hline
-      BLEU rs1, rs2, simm10 & 011111 & 
-      \begin{tabular}{l} if rs1 unsigned value is equal or less than rs2 one, \\ jump to PC + simm10 \end{tabular} \\ \hline
+      BEQ rs1, rs2, simm10 & 001111 &
+      \begin{tabular}{l} If rs1 value is equal to rs2 value, \\ jump to PC + simm10. \end{tabular} \\ \hline
+      BNE rs1, rs2, simm10 & 101111 &
+      \begin{tabular}{l} If rs1 value is not equal to rs2 value, \\ jump to PC + simm10. \end{tabular} \\ \hline
+      BLT rs1, rs2, simm10 & 110111 &
+      \begin{tabular}{l} If rs1 signed value is less than rs2 one, \\ jump to PC + simm10. \end{tabular} \\ \hline
+      BLTU rs1, rs2, simm10 & 010111 &
+      \begin{tabular}{l} If rs1 unsigned value is less than rs2 one, \\ jump to PC + simm10. \end{tabular} \\ \hline
+      BLE rs1, rs2, simm10 & 111111 &
+      \begin{tabular}{l} If rs1 signed value is equal or less than rs2 one, \\ jump to PC + simm10. \end{tabular} \\ \hline
+      BLEU rs1, rs2, simm10 & 011111 &
+      \begin{tabular}{l} If rs1 unsigned value is equal or less than rs2 one, \\ jump to PC + simm10. \end{tabular} \\ \hline
     \end{tabular}
 \end{center}
 
